updated Japanese translation

--- a/po/wesnoth-dm/ja.po
+++ b/po/wesnoth-dm/ja.po
@@ -3,18 +3,18 @@
 # Copyright (C) 2009-2010 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # Automatically generated, 2005.
-# IWAI, Masaharu <iwaim.sub@gmail.com>, 2010-2011.
+# IWAI, Masaharu <iwaim.sub@gmail.com>, 2010-2012.
 # clearpotion <clearpotion+fantasy@gmail.com>, 2010.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: The Battle for Wesnoth 1.9.3+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-04-07 18:46+0900\n"
+"POT-Creation-Date: 2012-01-22 15:00+0100\n"
+"PO-Revision-Date: 2012-08-05 20:45+0900\n"
 "Last-Translator: IWAI, Masaharu <iwaim.sub@gmail.com>\n"
 "Language-Team: <wesnoth-ja-translate@lists.sourceforge.jp>\n"
-"Language: Japanese\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -295,7 +295,7 @@ msgstr ""
 #. [message]: speaker=Methor
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:217
 msgid "But I will not see you to its end, for that is yours alone."
-msgstr "しかし、私はあなた自身とも言える。最後の時まで会うことはないでしょう。"
+msgstr "しかし、私はお前自身とも言える。最後の時まで会うことはないだろう。"
 
 # %c
 #. [message]: speaker=Methor
@@ -304,8 +304,8 @@ msgid ""
 "Dangers and trials await us. When you have truly claimed the name you have "
 "been given, I will depart."
 msgstr ""
-"危険と苦難が我々を待ち受けている。あなたが、あなたに与えられた名前を真に求め"
-"たとき、私は旅立つであろう。"
+"危険と苦難が我々を待ち受けている。お前が、お前に与えられた名前を真に求めたと"
+"き、私は旅立つであろう。"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:232
@@ -330,9 +330,9 @@ msgid ""
 "magecraft to aid those they traveled among and to deepen their understanding "
 "of the hidden currents and powers of the world."
 msgstr ""
-"Delfador は Methor と共に人間の住む陸地内およびそれ以外の多くの奇妙な場所を彷"
-"徨いました。二人は、旅路の助けのためや、世界の隠された動向と力の理解を深める"
-"ために魔術を使いながら、研究し修練を積みました。"
+"Delfador は Methor と共に人間の住む陸地内や多くの奇妙な場所を彷徨いました。二"
+"人は、旅路の助けのためや、世界の隠された動向と力の理解を深めるために魔術を使"
+"いながら、研究し修練を積みました。"
 
 # 穏やかな谷→ なんとなく、ゴブリンが襲ってくるんでのどかなにしたいw
 #. [part]
@@ -435,10 +435,6 @@ msgstr "ああ！ Methor……死なないで！"
 
 #. [message]: speaker=unit
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:130
-#, fuzzy
-#| msgid ""
-#| "Heed my last words, Delfador! Journey northeast to Weldyn, and seek out "
-#| "my friend Leollyn. He will help you."
 msgid ""
 "Heed my last words, Delfador! Journey northwest to Weldyn, and seek out my "
 "friend Leollyn. He will help you."
@@ -448,12 +444,6 @@ msgstr ""
 
 #. [message]: speaker=Methor
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:143
-#, fuzzy
-#| msgid ""
-#| "Well done, Delfador! I see I have trained you well, and you are truly "
-#| "ready to seek your fortune. My traveling days are done, but it is time "
-#| "for you to journey northeast to Weldyn, and seek out my friend Leollyn. "
-#| "He will help you."
 msgid ""
 "Well done, Delfador! I see I have trained you well, and you are truly ready "
 "to seek your fortune. My traveling days are done, but it is time for you to "
@@ -1512,7 +1502,7 @@ msgstr "Bones"
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:331
 msgid "Penella"
-msgstr ""
+msgstr "Penella"
 
 #. [message]: speaker=Penella
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:335
@@ -1530,7 +1520,7 @@ msgstr ""
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:342
 msgid "Roddry"
-msgstr ""
+msgstr "Roddry"
 
 #. [message]: speaker=Roddry
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:346
@@ -1557,7 +1547,7 @@ msgstr "俺が死んだのはずいぶん昔の事だ。名前なんぞ忘れて
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:356
 msgid "Melinna"
-msgstr ""
+msgstr "Melinna"
 
 #. [message]: speaker=Melinna
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:360
@@ -1589,7 +1579,7 @@ msgstr ""
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:371
 msgid "Sythan"
-msgstr ""
+msgstr "Sythan"
 
 #. [message]: speaker=Sythan
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:375
@@ -1603,7 +1593,7 @@ msgstr ""
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:378
 msgid "Hereld"
-msgstr ""
+msgstr "Hereld"
 
 #. [message]: speaker=Hereld
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:382
@@ -3152,7 +3142,7 @@ msgstr "Unhul"
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/14_Shadows.cfg:404
 msgid "I arrive too late for the entertainment, it would seem."
-msgstr "お楽しみには遅すぎたようだ。"
+msgstr "お楽しみには遅すぎたようだ。間もなく訪れるだろう。"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Delfadors_Memoirs/scenarios/14_Shadows.cfg:411
@@ -3236,10 +3226,8 @@ msgstr "Trgrau"
 
 #. [objective]: condition=lose
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:198
-#, fuzzy
-#| msgid "Death of Garard"
 msgid "Death of Garard II"
-msgstr "Garard の死"
+msgstr "Garard 2世の死"
 
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:243
@@ -3275,7 +3263,7 @@ msgstr ""
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:259
 msgid "Agreed, but we must make haste, for the King is hard pressed."
-msgstr ""
+msgstr "同感だ。ひどく劣勢の我らが王のためにも急がねばらない。"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:267
