updated German translation

--- a/po/wesnoth-utbs/de.po
+++ b/po/wesnoth-utbs/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-01-21 14:42+0100\n"
+"PO-Revision-Date: 2012-08-12 10:45+0100\n"
 "Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: \n"
@@ -3043,6 +3043,13 @@ msgstr ""
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2613
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2877
+#, fuzzy
+#| msgid ""
+#| "We have suffered losses, but we are not broken yet. We have saved most of "
+#| "our people tonight. But while elves who have fought with you in the past "
+#| "will gladly return, as the numbers of our people dwindle, it’s going to "
+#| "become more and more costly to recruit new warriors. It would be wise to "
+#| "stockpile gold against this eventuality."
 msgid ""
 "We have suffered losses, but we we are not broken yet. We have saved most of "
 "our people tonight. But while elves who have fought with you in the past "
@@ -3060,6 +3067,14 @@ msgstr ""
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2622
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2886
+#, fuzzy
+#| msgid ""
+#| "We have suffered grievous losses, but we are not broken yet. Long will "
+#| "this slaughter be remembered by our people. Where was Eloh during the "
+#| "darkness? And I’m afraid that while elves who have fought with you in the "
+#| "past will gladly return, as the numbers of our people dwindle, it’s going "
+#| "to become more and more costly to recruit new warriors. It would be wise "
+#| "to stockpile gold against this eventuality."
 msgid ""
 "We have suffered grievous losses, but we we are not broken yet. Long will "
 "this slaughter be remembered by our people. Where was Eloh during the "
@@ -18186,3 +18201,11 @@ msgstr "Lange Finsternis (3)"
 #: data/campaigns/Under_the_Burning_Suns/utils/time.cfg:164
 msgid "The Long Dark (4)"
 msgstr "Lange Finsternis (4)"
+
+#~| msgid "Should I take this sword?"
+#~ msgid "Should I take this ring?"
+#~ msgstr "Soll ich diesen Ring an mich nehmen?"
+
+#~| msgid "No, I think someone else should wield it."
+#~ msgid "No, I think someone else should wear it."
+#~ msgstr "Nein, ich denke, jemand anderes sollte ihn tragen."
