updated Lithuanian translation

--- a/po/wesnoth-nr/lt.po
+++ b/po/wesnoth-nr/lt.po
@@ -4022,6 +4022,7 @@ msgstr "Aledoras"
 msgid "My God! Tallin is that you?"
 msgstr ""
 
+# ignore-interpolations: $betrayed_friend.name
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/06b_Slave_of_the_Undead.cfg:284
 msgid "$betrayed_friend.name, I..."
@@ -6402,6 +6403,7 @@ msgstr ""
 msgid "Hello, Tallin"
 msgstr "Sveikas, Talinai"
 
+# ignore-interpolations: $betrayed_friend.name
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/09b_Judgment.cfg:134
 msgid "$betrayed_friend.name, you?"
