--- a/po/wesnoth-sotbe/lt.po
+++ b/po/wesnoth-sotbe/lt.po
@@ -962,6 +962,7 @@ msgstr ""
 msgid "What can you expect, Chief? They’re elves after all."
 msgstr "O ko daugiau iš jų tikėtis, vade? Jie juk elfai."
 
+# ignore-interpolations: $scout.name
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/04_The_Siege_of_Barag_Gor.cfg:273
 msgid "Hmmm. $scout.name, go find out what they are up to."
