--- a/po/wesnoth-tutorial/lt.po
+++ b/po/wesnoth-tutorial/lt.po
@@ -1815,6 +1815,7 @@ msgstr ""
 "Pasiilgsime $deadguy.name|, nes ji turėjo $deadguy.experience patirties "
 "taškų. Jau greitai būtų pasiekusi antrą lygį."
 
+# ignore-interpolations: $deadguy.name
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1461
 msgid ""
@@ -1824,6 +1825,7 @@ msgstr ""
 "Pasiilgsime tavęs, bet tai bent jau ne kurio nors iš mūsų patyrusių karių "
 "mirtis!"
 
+# ignore-interpolations: $deadguy.name
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1464
 msgid ""
