--- a/po/wesnoth/lt.po
+++ b/po/wesnoth/lt.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2012-02-18 14:36+0100\n"
+"PO-Revision-Date: 2012-08-13 15:34+0300\n"
 "Last-Translator: Andrius Štikonas <stikonas@gmail.com>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "Language: Lithuanian\n"
@@ -100,17 +100,17 @@ msgstr "Uždrausti pranešimus"
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:106
 msgid "Reverse time graphics"
-msgstr ""
+msgstr "Apsukti laiko grafiką"
 
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:107
 msgid "Choose whether the sun moves left-to-right or right-to-left"
-msgstr ""
+msgstr "Pasirinkite, ar saulė juda iš kairės į dešinę, ar iš dešinės į kairę"
 
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:114
 msgid "Follow unit actions"
-msgstr ""
+msgstr "Sekti karių veiksmus"
 
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:115
