--- a/po/wesnoth-dw/lt.po
+++ b/po/wesnoth-dw/lt.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2012-07-16 21:51+0300\n"
+"PO-Revision-Date: 2012-07-17 17:19+0300\n"
 "Last-Translator: Andrius Štikonas <stikonas@gmail.com>\n"
 "Language-Team: none\n"
 "Language: Lithuanian\n"
@@ -103,7 +103,7 @@ msgstr ""
 #. [about]
 #: data/campaigns/Dead_Water/_main.cfg:40
 msgid "Artwork"
-msgstr "Grafija"
+msgstr "Grafika"
 
 #. [scenario]: id=01_Invasion
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:36
@@ -527,7 +527,7 @@ msgstr ""
 #. [unit]: type=Dread Bat, id=Fearsome Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:458
 msgid "Fearsome Bat"
-msgstr "Bebaimis šikšnosparnis"
+msgstr "Bauginantis šikšnosparnis"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:473
