--- a/po/wesnoth-low/lt.po
+++ b/po/wesnoth-low/lt.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2010-01-01 00:00+0300\n"
+"PO-Revision-Date: 2012-08-13 15:37+0300\n"
 "Last-Translator: Andrius Štikonas <stikonas@gmail.com>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "Language: Lithuanian\n"
@@ -2637,7 +2637,7 @@ msgstr ""
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:452
 msgid " Kalenz is able to recruit dwarves from now on."
-msgstr ""
+msgstr " Kalenzas nuo šiol gali samdyti dvarfus."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:452
@@ -4884,11 +4884,13 @@ msgstr ""
 "Tik Landaras turi valios padaryti tai, kas turi būti padaryta, kad elfai "
 "būtų išgelbėti!"
 
+# ignore-interpolations: $unit.name
 #. [message]: role=betrayer
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/21_Elvish_Assassins.cfg:171
 msgid "Hold, $unit.name|! Now we fight for Landar!"
 msgstr "Stok! Dabar mes kaunamės už Landarą!"
 
+# ignore-interpolations: $unit.name
 #. [message]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/21_Elvish_Assassins.cfg:193
 msgid "Hold your hand, $unit.name|! $second_unit.name| is on our side!"
@@ -5093,6 +5095,7 @@ msgstr ""
 msgid "No! It all ends here!"
 msgstr "Ne! Viskas čia baigiasi!"
 
+# ignore-interpolations: $unit.name
 #. [message]: speaker=second_unit
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/23_End_of_War.cfg:150
 msgid ""
@@ -5104,6 +5107,7 @@ msgstr "Atleisk man. Tavo vardą garbindamas dainuosiu po žvaigždėmis!"
 msgid "We must all pass, $second_unit.name|. Make your song beautiful..."
 msgstr ""
 
+# ignore-interpolations: $unit.name
 #. [message]: speaker=second_unit
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/23_End_of_War.cfg:172
 msgid "Forgive me, $unit.name|, this victory brings me no joy."
@@ -5343,6 +5347,7 @@ msgstr "Negaliu su orkais kautis vienas! Viskas baigta!"
 msgid "I grieve that I have failed you, my lord Kalenz..."
 msgstr "Man skauda širdį, kad tave nuvyliau, valdove Kalenzai..."
 
+# ignore-interpolations: $unit.name
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/deaths.cfg:124
 msgid "Farewell $unit.name. Your loyal service won’t be forgotten."
