--- a/po/wesnoth-nr/lt.po
+++ b/po/wesnoth-nr/lt.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-21 01:45+0100\n"
+"POT-Creation-Date: 2012-01-22 15:00+0100\n"
 "PO-Revision-Date: 2011-12-15 21:41+0300\n"
 "Last-Translator: Andrius Štikonas <stikonas@gmail.com>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
@@ -4022,6 +4022,7 @@ msgstr "Aledoras"
 msgid "My God! Tallin is that you?"
 msgstr ""
 
+# ignore-interpolations: $betrayed_friend.name
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/06b_Slave_of_the_Undead.cfg:284
 msgid "$betrayed_friend.name, I..."
@@ -6402,6 +6403,7 @@ msgstr ""
 msgid "Hello, Tallin"
 msgstr "Sveikas, Talinai"
 
+# ignore-interpolations: $betrayed_friend.name
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/09b_Judgment.cfg:134
 msgid "$betrayed_friend.name, you?"
