--- a/po/wesnoth-tutorial/lt.po
+++ b/po/wesnoth-tutorial/lt.po
@@ -1802,6 +1802,7 @@ msgstr ""
 "Pasiilgsime $deadguy.name|, nes ji turėjo $deadguy.experience patirties "
 "taškų. Jau greitai būtų pasiekusi antrą lygį."
 
+# ignore-interpolations: $deadguy.name
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1438
 msgid ""
@@ -1811,6 +1812,7 @@ msgstr ""
 "Pasiilgsime tavęs, bet tai bent jau ne kurio nors iš mūsų patyrusių karių "
 "mirtis!"
 
+# ignore-interpolations: $deadguy.name
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1441
 msgid ""
