--- a/po/wesnoth-low/lt.po
+++ b/po/wesnoth-low/lt.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2010-01-01 00:00+0300\n"
+"PO-Revision-Date: 2012-08-13 15:37+0300\n"
 "Last-Translator: Andrius Štikonas <stikonas@gmail.com>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "Language: Lithuanian\n"
@@ -4879,11 +4879,13 @@ msgstr ""
 "Tik Landaras turi valios padaryti tai, kas turi būti padaryta, kad elfai "
 "būtų išgelbėti!"
 
+# ignore-interpolations: $unit.name
 #. [message]: role=betrayer
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/21_Elvish_Assassins.cfg:171
 msgid "Hold, $unit.name|! Now we fight for Landar!"
 msgstr "Stok! Dabar mes kaunamės už Landarą!"
 
+# ignore-interpolations: $unit.name
 #. [message]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/21_Elvish_Assassins.cfg:193
 msgid "Hold your hand, $unit.name|! $second_unit.name| is on our side!"
@@ -5088,6 +5090,7 @@ msgstr ""
 msgid "No! It all ends here!"
 msgstr "Ne! Viskas čia baigiasi!"
 
+# ignore-interpolations: $unit.name
 #. [message]: speaker=second_unit
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/23_End_of_War.cfg:150
 msgid ""
@@ -5099,6 +5102,7 @@ msgstr "Atleisk man. Tavo vardą garbindamas dainuosiu po žvaigždėmis!"
 msgid "We must all pass, $second_unit.name|. Make your song beautiful..."
 msgstr ""
 
+# ignore-interpolations: $unit.name
 #. [message]: speaker=second_unit
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/23_End_of_War.cfg:172
 msgid "Forgive me, $unit.name|, this victory brings me no joy."
@@ -5358,6 +5362,7 @@ msgstr "Negaliu su orkais kautis vienas! Viskas baigta!"
 msgid "I grieve that I have failed you, my lord Kalenz..."
 msgstr "Man skauda širdį, kad tave nuvyliau, valdove Kalenzai..."
 
+# ignore-interpolations: $unit.name
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/deaths.cfg:124
 msgid "Farewell $unit.name. Your loyal service won’t be forgotten."
@@ -5372,3 +5377,6 @@ msgstr "O, ne! Pavėlavome..."
 #: data/campaigns/Legend_of_Wesmere/utils/low-macros.cfg:43
 msgid "You retrieve $amount_gold pieces of gold."
 msgstr "Atgavote $amount_gold pieces aukso."
+
+#~ msgid " Kalenz is able to recruit dwarves from now on."
+#~ msgstr " Kalenzas nuo šiol gali samdyti dvarfus."
