updated Hungarian translation

--- a/po/wesnoth-utbs/hu.po
+++ b/po/wesnoth-utbs/hu.po
@@ -11,16 +11,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: hu-utbs_1.4_1.5\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2012-01-17 07:38+0100\n"
-"Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
-"Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
+"POT-Creation-Date: 2012-01-22 15:00+0100\n"
+"PO-Revision-Date: 2012-08-15 08:38+0200\n"
+"Last-Translator: Dr. Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
+"Language-Team: Hungarian <kde-l10n-hu@kde.org>\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: Lokalize 1.4\n"
 
 #. [campaign]: id=Under_the_Burning_Suns
 #. [editor_group]: id=utbs
@@ -2890,6 +2890,13 @@ msgstr ""
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2613
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2877
+#, fuzzy
+#| msgid ""
+#| "We have suffered losses, but we are not broken yet. We have saved most of "
+#| "our people tonight. But while elves who have fought with you in the past "
+#| "will gladly return, as the numbers of our people dwindle, it’s going to "
+#| "become more and more costly to recruit new warriors. It would be wise to "
+#| "stockpile gold against this eventuality."
 msgid ""
 "We have suffered losses, but we we are not broken yet. We have saved most of "
 "our people tonight. But while elves who have fought with you in the past "
@@ -2905,6 +2912,14 @@ msgstr ""
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2622
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2886
+#, fuzzy
+#| msgid ""
+#| "We have suffered grievous losses, but we are not broken yet. Long will "
+#| "this slaughter be remembered by our people. Where was Eloh during the "
+#| "darkness? And I’m afraid that while elves who have fought with you in the "
+#| "past will gladly return, as the numbers of our people dwindle, it’s going "
+#| "to become more and more costly to recruit new warriors. It would be wise "
+#| "to stockpile gold against this eventuality."
 msgid ""
 "We have suffered grievous losses, but we we are not broken yet. Long will "
 "this slaughter be remembered by our people. Where was Eloh during the "
@@ -3340,7 +3355,7 @@ msgstr "A Gyorsaság Gyűrűje"
 #. [object]: id=SpeedyRing
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:866
 msgid "This ring will increase your maximum speed by 1."
-msgstr "Ez a gyűrű növeli a maximális sebességet eggyel."
+msgstr "Ez a gyűrű eggyel növeli a maximális sebességet."
 
 #. [message]: speaker=$explorer.id
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:903
@@ -17280,6 +17295,14 @@ msgstr "Hosszú sötétség (3)"
 #: data/campaigns/Under_the_Burning_Suns/utils/time.cfg:164
 msgid "The Long Dark (4)"
 msgstr "Hosszú sötétség (4)"
+
+#~| msgid "Should I take this sword?"
+#~ msgid "Should I take this ring?"
+#~ msgstr "Elvegyem a gyűrűt?"
+
+#~| msgid "No, I think someone else should wield it."
+#~ msgid "No, I think someone else should wear it."
+#~ msgstr "Nem, szerintem másnak kellene használnia."
 
 #~ msgid ""
 #~ "Desert Shamans focus on less violent ways to hinder the enemy. Their "
