updated Hungarian translation

--- a/po/wesnoth-help/hu.po
+++ b/po/wesnoth-help/hu.po
@@ -13,9 +13,9 @@ msgstr ""
 "Project-Id-Version: hu-wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2012-03-30 10:14+0200\n"
-"Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
-"Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
+"PO-Revision-Date: 2012-08-15 08:35+0200\n"
+"Last-Translator: Dr. Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
+"Language-Team: Hungarian <kde-l10n-hu@kde.org>\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2148,7 +2148,7 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"<italic>text=Pihenés'</italic>: Ha egy egység nem mozog és nem harcol (őt "
+"<italic>text='Pihenés'</italic>: Ha egy egység nem mozog és nem harcol (őt "
 "sem támadják) egy körben, akkor a következő körben 2 ÉP-t gyógyul."
 
 #. [topic]: id=healing
